apps/metrics/thanos/ruler/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-ruler-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - ruler.home.alden.ai
  rules:
  - backendRefs:
    - name: thanos-ruler-operated
      port: 10902
    matches:
    - path:
        type: PathPrefix
        value: /
