apps/metrics/thanos/ruler/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: thanos-ruler-virtualservice
spec:
  hosts:
    - ruler.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: thanos-ruler-operated.thanos.svc.cluster.local
            port:
              number: 10902
